tests/negative/regression/r14.orng
fn main() -> Int {
    let mut x : [unreachable] Int
    0
} 